--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,22 +4,26 @@
 
 @font-face {
   font-family: 'Analogue';
-  src:  url('../fonts/analogue/analogue-webfont.ttf') format('ttf'),
-        url('../fonts/analogue/analogue-webfont.woff2') format('woff2'),
-        url('../fonts/analogue/analogue-webfont.woff') format('woff');
+  src:  url('/fonts/analogue/analogue-webfont.ttf') format('ttf'),
+        url('/fonts/analogue/analogue-webfont.woff2') format('woff2'),
+        url('/fonts/analogue/analogue-webfont.woff') format('woff');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Evangelina';
-  src:  url('../fonts/evangelina/evangelina-webfont.ttf') format('ttf'),
-        url('../fonts/evangelina/evangelina-webfont.woff2') format('woff2'),
-        url('../fonts/evangelina/evangelina-webfont.woff') format('woff');
+  src:  url('/fonts/evangelina/evangelina-webfont.ttf') format('ttf'),
+        url('/fonts/evangelina/evangelina-webfont.woff2') format('woff2'),
+      url('/fonts/evangelina/evangelina-webfont.woff') format('woff');
+  font-display: swap;
 }
 @font-face {
   font-family: 'Tangerine';
-  src:  url('../fonts/tangerine/tangerine-webfont.ttf') format('ttf'),
-        url('../fonts/tangerine/tangerine-webfont.woff2') format('woff2'),
-        url('../fonts/tangerine/tangerine-webfont.woff') format('woff');
+  src:  url('/fonts/tangerine/tangerine-webfont.ttf') format('ttf'),
+        url('/fonts/tangerine/tangerine-webfont.woff2') format('woff2'),
+        url('/fonts/tangerine/tangerine-webfont.woff') format('woff');
+  font-display: swap;
 }
+
 
 html,
 body {
