--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,21 +4,24 @@
 
 @font-face {
   font-family: 'Analogue';
-  src:  url('/fonts/analogue/analogue-webfont.ttf') format('ttf'),
+  src: local('Analogue'), url('/fonts/analogue/analogue-webfont.ttf') format('ttf'),
         url('/fonts/analogue/analogue-webfont.woff2') format('woff2'),
         url('/fonts/analogue/analogue-webfont.woff') format('woff');
   font-display: swap;
 }
 @font-face {
   font-family: 'Evangelina';
-  src:  url('/fonts/evangelina/EvangelinaRegular.ttf') format('ttf'),
-        url('/fonts/evangelina/EvangelinaRegular.woff2') format('woff2'),
-      url('/fonts/evangelina/EvangelinaRegular.woff') format('woff');
-  font-display: swap;
+    src: url('/fonts/analogue/EvangelinaRegular.woff2') format('woff2'),
+        url('/fonts/analogue/EvangelinaRegular.woff') format('woff'),
+        url('/fonts/analogue/EvangelinaRegular.ttf') format('truetype'),
+        url('/fonts/analogue/EvangelinaRegular.svg#EvangelinaRegular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
 }
 @font-face {
   font-family: 'Tangerine';
-  src:  url('/fonts/tangerine/tangerine-webfont.ttf') format('ttf'),
+  src: local('Tangerine'), url('/fonts/tangerine/tangerine-webfont.ttf') format('ttf'),
         url('/fonts/tangerine/tangerine-webfont.woff2') format('woff2'),
         url('/fonts/tangerine/tangerine-webfont.woff') format('woff');
   font-display: swap;
